# tourbox-linux

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  ble_test_events.py  ble_test_tourbox.py  ble_test_tuxbox.py  install.sh  install_config.sh  monitor_keys.py  requirements.txt  setup.cfg  test_migration.sh  tuxbox-gui.desktop  uninstall.sh  usb_test_tuxbox.py
docs/: BUTTON_MAPPING_GUIDE.md  BUTTON_TIMING_TRADEOFFS.md  CONFIG_GUIDE.md  DEVELOPMENT.md  GUI_PROGRESS.md  GUI_USER_GUIDE.md  WHY_NO_OVERLAYS.md
docs/technical/: KDOTOOL_INFO.md  LOG_MANAGEMENT.md  TOURBOX_ELITE_PROTOCOL_SOLVED.md  WINDOWS_BLE_CAPTURE_GUIDE.md
tourboxelite/: __main__.py  config_loader.py  default_mappings.conf  device_base.py  device_ble.py  device_usb.py  profile_io.py  window_monitor.py
tourboxelite/gui/: README.md  __init__.py  config_writer.py  control_editor.py  controls_list.py  driver_manager.py  main_window.py  profile_manager.py  profile_settings_dialog.py  ui_constants.py
tuxbox/: __main__.py  config_loader.py  default_mappings.conf  device_base.py  device_ble.py  device_usb.py  haptic.py  profile_io.py
tuxbox/gui/: README.md  __init__.py  __main__.py  ble_listener.py  config_writer.py  control_editor.py  controller_view.py  controls_list.py  driver_manager.py  import_conflict_dialog.py  main_window.py  profile_manager.py  profile_settings_dialog.py  requirements.txt  update_checker.py
