[metadata]
name = tuxbox
version = attr: tuxbox.VERSION
description = TuxBox - Linux driver for TourBox controllers
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = input, keyboard, bluetooth, ble, wayland, tourbox, tuxbox
license = MIT License
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: System :: Hardware
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
install_requires =
    bleak>=0.20.0
    evdev>=1.6.0
    pyserial>=3.5

[options.package_data]
* = *.md, *.conf
tuxbox.gui = assets/*.svg

[options.entry_points]
console_scripts =
    tuxbox = tuxbox.__main__:main
    tuxbox-ble = tuxbox.device_ble:main
    tuxbox-usb = tuxbox.device_usb:main
    tuxbox-gui = tuxbox.gui.main_window:main
